# ModuShell

./: .gitignore  LICENSE  README.md  Reference.md  TODO.md  pyproject.toml
.github/workflows/: build_ver.yml
src/ModuShell/: 8bit_colors.json  __init__.py  core.py
tests/: terminal_compatability_test.py
